apply plugin: 'java'
apply plugin: 'maven'
apply plugin: 'maven-publish'
apply plugin: 'idea'
apply plugin: 'eclipse'
apply plugin: 'signing'

archivesBaseName = 'sequencetools'
group = 'uk.ac.ebi.ena.sequence'


ext.version_base = '2.12.6'


version = version_base
tasks.withType(Javadoc).all { enabled = false }

sourceCompatibility = 1.8
targetCompatibility = 1.8

wrapper {
    gradleVersion = '5.2.1'
}

configurations.all {
	
	if( !hasProperty( 'artifactoryUsername' ) )
		project.ext.properties.artifactoryUsername = ''
	else
		project.ext.properties.artifactoryUsername = artifactoryUsername;
		
	if( !hasProperty( 'artifactoryPassword' ) )
		project.ext.properties.artifactoryPassword = ''
	else
	 	project.ext.properties.artifactoryPassword = artifactoryPassword;

	if( !hasProperty( 'gitlab_private_token' ) )
		project.ext.properties.gitlab_private_token = ''
	else
		project.ext.properties.gitlab_private_token = gitlab_private_token;
}


 if (JavaVersion.current().isJava6Compatible()) 
  {
    allprojects 
    {
        tasks.withType(Javadoc) 
        {
            options.addStringOption('Xdoclint:none', '-quiet')
        }
    }
  }

repositories {
    mavenLocal()
    maven {
        url "https://gitlab.ebi.ac.uk/api/v4/groups/enasequence/-/packages/maven"

        credentials(HttpHeaderCredentials) {
            name = "Private-Token"
            value = gitlab_private_token
        }
        authentication {
            header( HttpHeaderAuthentication )
        }

    }
    mavenCentral()
}

dependencies
        {
            compile 'log4j:log4j:1.2.17'
            compile 'commons-collections:commons-collections:3.2.2'
            compile 'commons-dbutils:commons-dbutils:1.5'
            compile 'commons-lang:commons-lang:2.6'
            compile 'org.apache.commons:commons-lang3:3.0'
            compile 'org.apache.commons:commons-compress:1.20'
            compile 'org.json:json:20131018'
            compile 'com.beust:jcommander:1.72'
            compile 'com.googlecode.java-diff-utils:diffutils:1.2.1'
            compile group: 'org.mapdb', name: 'mapdb', version: '3.0.7'
            compile 'uk.ac.ebi.ena:webin-era-service-sdk:3.4.1'
            compile( 'uk.ac.ebi.ena.webin-cli:webin-cli-validator:1.3.1' )
            compile(group: 'uk.ac.ebi.ena.taxonomy', name: 'webin-taxonomy-sdk', version: '1.0.0')
            testCompile "junit:junit:4.13.1"
            testCompile 'org.easymock:easymock:4.2'
            implementation(group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.2.0.RELEASE') {
                exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
            }
        }

task javadocJar(type: Jar, dependsOn: javadoc) {
    classifier = 'javadoc'
    from 'build/docs/javadoc'
}
task sourcesJar(type: Jar)  {
    from sourceSets.main.allSource
    classifier = 'sources'
}

artifacts
        {
            archives jar
            archives javadocJar
            archives sourcesJar
        }

task sourceJar(type: Jar) {
    from sourceSets.main.allJava
    archiveClassifier = 'sources'
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
            artifact sourceJar
        }
    }
    repositories {
        maven {
            url "https://gitlab.ebi.ac.uk/api/v4/projects/965/packages/maven"
            credentials(HttpHeaderCredentials) {
                name = "Private-Token"
                value = project.ext.properties.gitlab_private_token
            }
            authentication {
                header( HttpHeaderAuthentication )
            }
        }       
    }
}
